--- a/.github/workflows/docker-ci.yaml
+++ b/.github/workflows/docker-ci.yaml
@@ -40,5 +40,8 @@ jobs:
       - name: Launch Web Service
         run: docker compose up -d
 
+      - name: Wait for Web Service to launch
+        run: ./wait-for-webserver.sh
+
       - name: Run Selenium Tests
         run: cd selenium && mvn test
